--- a/libs/frontend/application/atom/tsconfig.lib.json
+++ b/libs/frontend/application/atom/tsconfig.lib.json
@@ -5,7 +5,9 @@
     "types": ["node"],
     "strict": true,
     "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "composite": true,
+    "declaration": true
   },
   "files": [
     "../../../../node_modules/@nx/react/typings/cssmodule.d.ts",
