--- a/apps/web/tsconfig.storybook.json
+++ b/apps/web/tsconfig.storybook.json
@@ -5,13 +5,13 @@
     "emitDecoratorMetadata": true,
     "noEmit": false
   },
-  "exclude": ["components/**/*.spec.ts", "components/**/*.test.ts"],
+  "exclude": [""],
   "include": [
-    "components/**/*.stories.ts",
-    "components/**/*.stories.js",
-    "components/**/*.stories.jsx",
-    "components/**/*.stories.tsx",
-    "components/**/*.stories.mdx",
+    "stories/**/*.stories.ts",
+    "stories/**/*.stories.js",
+    "stories/**/*.stories.jsx",
+    "stories/**/*.stories.tsx",
+    "stories/**/*.stories.mdx",
     "../../libs/frontend/application/**/*.stories.tsx",
     ".storybook/*.js",
     ".storybook/*.ts",
