--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -11,8 +11,7 @@
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
         "project": [
-          "apps/web/tsconfig(.*)?.json",
-          "apps/web/tsconfig.storybook.json"
+          "apps/web/tsconfig(.*)?.json"
         ]
       },
       "rules": {
