--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "npm": "please-use-pnpm",
     "pnpm": ">=9.0.0"
   },
-  "packageManager": "pnpm@9.1.1+sha512.14e915759c11f77eac07faba4d019c193ec8637229e62ec99eefb7cf3c3b75c64447882b7c485142451ee3a6b408059cdfb7b7fa0341b975f12d0f7629c71195",
   "version": "0.0.1",
   "license": "MIT",
   "sideEffects": false,
@@ -199,7 +198,7 @@
     "neo4j-driver": "5.16.0",
     "nestjs-pino": "4.0.0",
     "nestjs-typebox": "3.0.0-next.8",
-    "next": "14.2.4",
+    "next": "14.2.5",
     "next-http-proxy-middleware": "1.2.6",
     "next-safe-action": "^7.1.3",
     "next-seo": "6.5.0",
@@ -308,13 +307,11 @@
     "@storybook/addon-themes": "^8.1.11",
     "@storybook/core-common": "8.1.11",
     "@storybook/core-server": "8.1.11",
-    "@storybook/jest": "^0.2.3",
     "@storybook/nextjs": "8.1.11",
     "@storybook/react": "^8.1.11",
     "@storybook/react-dom-shim": "^8.1.11",
     "@storybook/react-vite": "8.1.11",
     "@storybook/test-runner": "^0.19.0",
-    "@storybook/testing-library": "^0.2.2",
     "@stylistic/eslint-plugin-ts": "1.6.3",
     "@svgr/webpack": "8.0.1",
     "@swc-node/register": "1.9.1",
@@ -445,11 +442,9 @@
     "vite": "5.3.3",
     "wait-on": "6.0.1"
   },
-  "resolutions": {
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.9"
-  },
+  "resolutions": {},
   "nx": {
     "includedScripts": []
-  }
+  },
+  "packageManager": "pnpm@9.6.0+sha512.38dc6fba8dba35b39340b9700112c2fe1e12f10b17134715a4aa98ccf7bb035e76fd981cf0bb384dfa98f8d6af5481c2bef2f4266a24bfa20c34eb7147ce0b5e"
 }
