--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "sideEffects": false,
   "scripts": {
-    "e2e": "nx e2e e2e -c test --skipServe --watch",
+    "e2e": "nx e2e web-e2e",
     "e2e:web": "nx serve web -c test",
     "e2e:api": "nx serve api -c test",
     "cli": "scripts/nx/cli.sh",
@@ -133,7 +133,6 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-hookz/web": "22.0.0",
     "@react-spring/web": "9.7.3",
     "@rjsf/antd": "5.18.5",
     "@rjsf/core": "5.18.3",
@@ -232,6 +231,7 @@
     "react-sticky-box": "2.0.0",
     "react-stickynode": "4.1.0",
     "react-syntax-highlighter": "15.5.0",
+    "react-use": "^17.5.1",
     "recoil": "0.7.7",
     "reflect-metadata": "0.1.13",
     "rooks": "7.6.1",
@@ -265,10 +265,10 @@
   },
   "devDependencies": {
     "@0no-co/graphqlsp": "1.12.12",
+    "@codelab-app/client-preset": "latest",
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
     "@graphql-codegen/cli": "5.0.2",
-    "@codelab-app/client-preset": "latest",
     "@graphql-codegen/near-operation-file-preset": "3.0.0",
     "@graphql-codegen/schema-ast": "4.1.0",
     "@graphql-codegen/typescript": "4.0.9",
