--- a/libs/shared/infra/gql/project.json
+++ b/libs/shared/infra/gql/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "frontend-infra-gql",
+  "name": "shared-infra-gql",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/frontend/infra/gql/src",
+  "sourceRoot": "libs/shared/infra/gql/src",
   "projectType": "library",
   "tags": [
     "projectName:frontend-infra-gql",
@@ -10,6 +10,6 @@
     "layer:infra",
     "scope:frontend"
   ],
-  "// targets": "to see all targets run: nx show project frontend-infra-gql --web",
+  "// targets": "to see all targets run: nx show project shared-infra-gql --web",
   "targets": {}
 }
