--- a/apps/design-system/.eslintrc.json
+++ b/apps/design-system/.eslintrc.json
@@ -4,18 +4,10 @@
     "../../.eslintrc.json",
     "plugin:storybook/recommended"
   ],
-  "ignorePatterns": [
-    "!**/*",
-    "storybook-static"
-  ],
+  "ignorePatterns": ["!**/*", "storybook-static"],
   "overrides": [
     {
-      "files": [
-        "*.ts",
-        "*.tsx",
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "parserOptions": {
         "project": [
           "apps/design-system/tsconfig.*?.json",
@@ -25,17 +17,11 @@
       "rules": {}
     },
     {
-      "files": [
-        "*.ts",
-        "*.tsx"
-      ],
+      "files": ["*.ts", "*.tsx"],
       "rules": {}
     },
     {
-      "files": [
-        "*.js",
-        "*.jsx"
-      ],
+      "files": ["*.js", "*.jsx"],
       "rules": {}
     }
   ]
