--- a/package.json
+++ b/package.json
@@ -43,6 +43,10 @@
     "browser-tools": "npx @agentdeskai/browser-tools-server@1.2.0"
   },
   "private": true,
+  "validate-branch-name": {
+    "pattern": "^(feat|fix|refactor|test)\\/[0-9]+-[a-z0-9-]+$|^(master|main|dev|nx-upgrade)$|^(stag|prod)-(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)\\.(0|[1-9][0-9]*)$",
+    "errorMsg": "Branch name must follow pattern: <type>/<issue-number>-<description>\n\nAllowed types: feat, fix, refactor, test\nExample: feat/3736-debug-env-service-tracking\n\nAlso allowed: master, main, dev, nx-upgrade, or release tags (stag-x.x.x, prod-x.x.x)"
+  },
   "dependencies": {
     "@ant-design/cssinjs": "1.23.0",
     "@ant-design/icons": "5.6.0",
@@ -451,6 +455,7 @@
     "ts-node": "10.9.1",
     "typescript": "5.5.4",
     "utility-types": "3.10.0",
+    "validate-branch-name": "^1.3.2",
     "vite": "6.2.1",
     "wait-on": "6.0.1"
   },
