--- a/libs/shared/infra/mem0/project.json
+++ b/libs/shared/infra/mem0/project.json
@@ -3,8 +3,13 @@
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/shared/infra/mem0/src",
   "projectType": "library",
-  "tags": ["scope:shared", "layer:infra", "projectType:library"],
-  "// targets": "to see all targets run: nx show project shared-infra-mem0 --web",
+  "tags": [
+    "projectName:shared-infra-mem0",
+    "projectType:library",
+    "type:concrete",
+    "layer:infra",
+    "scope:shared"
+  ],
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint"
