--- a/package.json
+++ b/package.json
@@ -205,6 +205,7 @@
     "graphql-ws": "5.16.0",
     "import-in-the-middle": "1.12.0",
     "input-otp": "1.2.4",
+    "invariant": "^2.2.4",
     "isolated-vm": "5.0.4",
     "jest-text-transformer": "1.0.4",
     "jotai": "2.9.3",
@@ -372,6 +373,7 @@
     "@types/flat": "5.0.2",
     "@types/fs-extra": "11.0.4",
     "@types/glob": "8.1.0",
+    "@types/invariant": "^2.2.37",
     "@types/jest": "29.5.12",
     "@types/jquery": "3.5.16",
     "@types/js-cookie": "3.0.1",
