--- a/apps/api/.env.test.example
+++ b/apps/api/.env.test.example
@@ -11,6 +11,12 @@ AUTH0_E2E_USERNAME=cypress@codelab.app
 AUTH0_E2E_PASSWORD=
 
 #
+# Auth0
+#
+AUTH0_M2M_CLIENT_ID=moWekTw0XAF4Bzl7GH8CZIEsskI1R4xA
+AUTH0_M2M_CLIENT_SECRET=
+
+#
 # Neo4j
 #
 NEO4J_URI=bolt://127.0.0.1:7688
