--- a/apps/sites/project.json
+++ b/apps/sites/project.json
@@ -7,12 +7,8 @@
   "implicitDependencies": [],
   "generators": {},
   "targets": {
-    "defaultConfiguration": {
-      "0": "d",
-      "1": "e",
-      "2": "v"
-    },
     "build": {
+      "defaultConfiguration": "dev",
       "executor": "@nx/next:build",
       "outputs": ["{options.outputPath}"],
       "options": {
@@ -21,8 +17,9 @@
       "configurations": {
         "ci": {},
         "prod": {},
-        "dev": {
-          "outputPath": "tmp/apps/sites/src"
+        "dev": {},
+        "test": {
+          "outputPath": "dist/apps/sites-test"
         }
       }
     },
@@ -44,6 +41,10 @@
         },
         "dev": {
           "buildTarget": "sites:build:dev",
+          "dev": true
+        },
+        "test": {
+          "buildTarget": "sites:build:test",
           "dev": true
         }
       },
